...
    <string name="edit_folder_success">Ordner wurde erfolgreich umbenannt</string>
    <string name="delete_all_selected_items_confirm_dialog_title">Elemente löschen</string>
    <string name="delete_all_selected_items_confirm_dialog_message">Möchtest Du wirklich alle markierten Elemente löschen? Alle darin enthaltenen Elemente werden ebenfalls gelöscht!</string>
    <string name="move_items_title">Verschieben</string>
    <string name="move_items_confirm_dialog_message">Möchtest Du %s Element(e) in den Ordner %s verschieben?</string>

    <string name="main_activity_app_bar_title">Home</string>
    <string name="activity_edit_box">Edit box</string>

    <string name="box_list_fab_content_description">Karte erstellen</string>

    <string name="box_activity_menu_edit">Box bearbeiten</string>
    <string name="box_activity_menu_delete">Box löschen</string>
    <string name="box_activity_fab_content_description">Add card to box</string>
    <string name="box_activity_learn_fab">Lernen</string>
    <string name="box_activity_learn_fab_content_description">Karten in Box lernen</string>

    <string name="create_box_app_bar_title">Neue Box</string>
    <string name="create_box_fab_content_description">Box speichern</string>
...
    <string name="create_card_fab_content_description">Karte speichern</string>
    <string name="create_card_question_text_field_hint">Frage</string>
    <string name="create_card_answer_text_field_hint">Antwort</string>
    <string name="create_card_answer_text_field_solution">Lösung</string>
    <string name="create_card_card_question_input_content_description">Card Question</string>
    <string name="create_card_cancel_dialog_title">Erstellung Abbrechen</string>
    <string name="create_card_apply_changes">Sollen die Änderungen an dieser Karte übernommen werden?</string>
    <string name="create_card_apply_changes_confirm">Übernehmen</string>
    <string name="create_card_apply_changes_discard">Verwerfen</string>
    <string name="create_card_empty_question">Frage darf nicht leer sein</string>
    <string name="create_card_empty_answer">Antwort darf nicht leer sein</string>
    <string name="create_card_action_bar_title">Neue Karte</string>
    <string name="create_card_successful">Karte wurde erfolgreich erstellt</string>
    <string name="create_card_cloze_needs_at_least_one_question">Lückentexte brauchen mindestens eine Lücke</string>
    <string name="create_card_add_cloze_button_explanation">Markiere zunächst den Text, der als Lücke markiert werden soll</string>
    <string name="edit_card_delete">Karte löschen</string>
    <string name="edit_card_successful">Karte wurde erfolgreich geändert</string>
    <string name="edit_card_action_bar_title">Karte bearbeiten</string>
    <string name="edit_card_delete_card_dialog_title">Karte löschen</string>
    <string name="edit_card_delete_card_dialog_message">Möchtest du diese Karte wirklich löschen?</string>
    <string name="edit_card_cloze_text_answer_is_ignored">Separete Antwort bei Lückentext nicht möglich</string>
    <string name="edit_card_cloze_text_is_required">Lückentexte brauchen Text</string>
    <string name="edit_card_set_type_remove_images_title">Bilder entfernen</string>
    <string name="edit_card_set_type_remove_images_message">Bilder sind bei diesem Kartentyp nicht möglich. Sollen die vorhandenen Bilder entfernt werden?</string>
    <string name="card_type_standard">Standard</string>
    <string name="card_type_cloze_text">Lückentext</string>
    <string name="card_type_strict">Strenge Abfrage</string>

    <string name="confirm_dialog_confirm_default">OK</string>
    <string name="confirm_dialog_cancel_default">Abbrechen</string>

    <string name="delete_box_confirm_dialog_title">Box löschen</string>
    <string name="delete_box_confirm_dialog_message">Wollen Sie diese Box wirklich löschen?</string>
    <string name="delete_box_error_occurred">Fehler: Box konnte nicht gelöscht werden</string>

    <string name="box_title">box_title</string>
...
